Chapter 9 — Listing 9.10: ClockAbstraction.java Demonstrates: Clock abstraction for testable, deterministic time-dependent code